// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider component snaps renderers should render Slider 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="theme-tc-slider tc-slider"
    style={
      Object {
        "alignSelf": "center",
        "width": "98%",
      }
    }
  >
    <ComponentEnhancer(undefined)
      activeDotStyle={Object {}}
      className="theme-tc-slider-rc-slider tc-slider-rc-slider"
      disabled={false}
      dotStyle={Object {}}
      dots={false}
      emptyValueLabel="no label"
      handle={[Function]}
      handleStyle={
        Array [
          Object {},
        ]
      }
      id="selectable"
      included={true}
      marks={Object {}}
      max={100}
      min={0}
      onAfterChange={[Function]}
      onBeforeChange={[Function]}
      onChange={[Function]}
      prefixCls="rc-slider"
      railStyle={Object {}}
      step={1}
      trackStyle={
        Array [
          Object {},
        ]
      }
      value={undefined}
      vertical={false}
    />
  </div>
</div>
`;

exports[`Slider component snaps renderers should render Slider with captionActions 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="theme-tc-slider tc-slider"
    style={
      Object {
        "alignSelf": "center",
        "width": "98%",
      }
    }
  >
    <ComponentEnhancer(undefined)
      activeDotStyle={Object {}}
      className="theme-tc-slider-rc-slider tc-slider-rc-slider"
      disabled={false}
      dotStyle={Object {}}
      dots={false}
      handle={[Function]}
      handleStyle={
        Array [
          Object {},
        ]
      }
      id={undefined}
      included={true}
      marks={Object {}}
      max={100}
      min={0}
      onAfterChange={[Function]}
      onBeforeChange={[Function]}
      onChange={[Function]}
      prefixCls="rc-slider"
      railStyle={Object {}}
      step={1}
      trackStyle={
        Array [
          Object {},
        ]
      }
      value={76}
      vertical={false}
    />
  </div>
  <div
    className="theme-tc-slider-captions tc-slider-captions"
  >
    <Action
      className=""
      data-feature="action"
      hideLabel={true}
      icon="talend-smiley-angry"
      id="icon1"
      label="Click Me"
      link={true}
      onClick={[Function]}
    />
    <Action
      className=""
      data-feature="action"
      hideLabel={true}
      icon="talend-smiley-neutral"
      id="icon2"
      label="Click Me"
      link={true}
      onClick={[Function]}
    />
    <Action
      className="theme-selected selected"
      data-feature="action"
      hideLabel={true}
      icon="talend-smiley-satisfied"
      id="icon3"
      label="Click Me"
      link={true}
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Slider component snaps renderers should render Slider with captionTextStepNumber 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="theme-tc-slider tc-slider"
    style={
      Object {
        "alignSelf": "center",
        "width": "98%",
      }
    }
  >
    <ComponentEnhancer(undefined)
      activeDotStyle={Object {}}
      className="theme-tc-slider-rc-slider tc-slider-rc-slider"
      disabled={false}
      dotStyle={Object {}}
      dots={false}
      handle={[Function]}
      handleStyle={
        Array [
          Object {},
        ]
      }
      id="selectable"
      included={true}
      label="Heeey"
      marks={Object {}}
      max={100}
      min={0}
      onAfterChange={[Function]}
      onBeforeChange={[Function]}
      onChange={[Function]}
      prefixCls="rc-slider"
      railStyle={Object {}}
      step={1}
      trackStyle={
        Array [
          Object {},
        ]
      }
      value={45}
      vertical={false}
    />
  </div>
  <div
    className="theme-tc-slider-captions tc-slider-text-captions"
  >
    <span>
      0%
    </span>
    <span>
      25%
    </span>
    <span>
      50%
    </span>
    <span>
      75%
    </span>
    <span>
      100%
    </span>
  </div>
</div>
`;

exports[`Slider component snaps renderers should render Slider with icons on status 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="theme-tc-slider tc-slider"
    style={
      Object {
        "alignSelf": "center",
        "width": "98%",
      }
    }
  >
    <ComponentEnhancer(undefined)
      activeDotStyle={Object {}}
      className="theme-tc-slider-rc-slider tc-slider-rc-slider"
      disabled={false}
      dotStyle={Object {}}
      dots={false}
      handle={[Function]}
      handleStyle={
        Array [
          Object {},
        ]
      }
      id="selectable"
      included={true}
      label="Heeey"
      marks={Object {}}
      max={100}
      min={0}
      onAfterChange={[Function]}
      onBeforeChange={[Function]}
      onChange={[Function]}
      prefixCls="rc-slider"
      railStyle={Object {}}
      step={1}
      trackStyle={
        Array [
          Object {},
        ]
      }
      value={45}
      vertical={false}
    />
  </div>
  <div
    className="theme-tc-slider-captions tc-slider-icons"
  >
    <Icon
      className=""
      name="talend-smiley-rating"
    />
    <Icon
      className=""
      name="talend-most-trusted"
    />
    <Icon
      className="theme-selected selected"
      name="talend-network"
    />
    <Icon
      className=""
      name="talend-streams"
    />
    <Icon
      className=""
      name="talend-tdc-negative"
    />
  </div>
</div>
`;
